--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/og": "^0.0.20",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
